This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Incorrect handling of PyObject_SetAttrString() in the _zoneinfo module
Type: Stage: resolved
Components: Extension Modules Versions: Python 3.10, Python 3.9
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: ZackerySpytz, miss-islington, serhiy.storchaka
Priority: normal Keywords: patch

Created on 2021-01-26 23:39 by ZackerySpytz, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 24345 merged ZackerySpytz, 2021-01-26 23:41
PR 24349 merged miss-islington, 2021-01-27 08:16
Messages (3)
msg385739 - (view) Author: Zackery Spytz (ZackerySpytz) * (Python triager) Date: 2021-01-26 23:39
There is a PyObject_SetAttrString() call in zoneinfo_init_subclass() which
is not checked for failure.  This could lead to serious bugs if an
exception occurs in PyObject_SetAttrString().
msg385749 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2021-01-27 08:16
New changeset 5327f370344a627f1578d8183d197feb286371c6 by Zackery Spytz in branch 'master':
bpo-43033: Fix the handling of PyObject_SetAttrString() in _zoneinfo.c (GH-24345)
https://github.com/python/cpython/commit/5327f370344a627f1578d8183d197feb286371c6
msg385751 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2021-01-27 09:40
New changeset cb77c5e1ddd9328e4706f8fdf893aa6bf697942c by Miss Islington (bot) in branch '3.9':
bpo-43033: Fix the handling of PyObject_SetAttrString() in _zoneinfo.c (GH-24345) (GH-24349)
https://github.com/python/cpython/commit/cb77c5e1ddd9328e4706f8fdf893aa6bf697942c
History
Date User Action Args
2022-04-11 14:59:40adminsetgithub: 87199
2021-01-27 09:41:10serhiy.storchakasetstatus: open -> closed
resolution: fixed
stage: patch review -> resolved
2021-01-27 09:40:53serhiy.storchakasetmessages: + msg385751
2021-01-27 08:16:51serhiy.storchakasetnosy: + serhiy.storchaka
messages: + msg385749
2021-01-27 08:16:36miss-islingtonsetnosy: + miss-islington
pull_requests: + pull_request23169
2021-01-26 23:41:32ZackerySpytzsetkeywords: + patch
stage: patch review
pull_requests: + pull_request23165
2021-01-26 23:39:25ZackerySpytzcreate