bpo-43033: Fix the handling of PyObject_SetAttrString() in _zoneinfo.c (GH-24345)